--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,13 @@ jobs:
           touch ./src/main/resources/application.yml
           echo "${{ secrets.APPLICATION_YML }}" >> src/main/resources/application.yml
 
+      ## create firebase-service-key.json
+      - name: create firebase_service_key.json file
+        run: |
+          mkdir ./src/main/resources/firebase
+          touch ./src/main/resources/firebase/firebase_service_key.json
+          echo "${{ secrets.FIREBASE_SERVICE_KEY }}" > src/main/resources/firebase/firebase_service_key.json
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
