--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
+
+    implementation 'org.json:json:20210307'
 }
 
 tasks.named('test') {
